# CMAKENGINE

./: LICENSE.md  README.md
.github/workflows/: build.yml
executable/: CMakeLists.txt
executable/CMAKENGINE/: CMAKENGINE.cpp
moduleA/: CMakeLists.txt
moduleA/cmake/: ModuleAConfig.cmake.in
moduleA/moduleA/: moduleA.cpp  moduleA.hpp
